// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-breadcrumb"
    theme="light"
  >
    <div
      class="t-breadcrumb__item"
    >
      <span
        class="t-breadcrumb--text-overflow"
      >
        <span
          class="t-breadcrumb__inner"
          style="max-width: 200px;"
        >
          页面1
        </span>
      </span>
      <span
        class="t-breadcrumb__separator"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="color: rgba(0, 0, 0, 0.3);"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </div>
    <div
      class="t-breadcrumb__item"
    >
      <span
        class="t-breadcrumb--text-overflow"
      >
        <span
          class="t-breadcrumb__inner"
          style="max-width: 200px;"
        >
          页面2页面2页面2页面2页面2页面2页面2页面2
        </span>
      </span>
      <span
        class="t-breadcrumb__separator"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="color: rgba(0, 0, 0, 0.3);"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </div>
    <div
      class="t-breadcrumb__item"
    >
      <span
        class="t-breadcrumb--text-overflow"
      >
        <span
          class="t-breadcrumb__inner"
          style="max-width: 120px;"
        >
          页面3页面3页面3页面3页面3页面3页面3页面3页面3页面3页面3页面3页面3页面3页面3
        </span>
      </span>
      <span
        class="t-breadcrumb__separator"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="color: rgba(0, 0, 0, 0.3);"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`custom.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-breadcrumb"
  >
    <div
      class="t-breadcrumb__item"
    >
      <span
        class="t-breadcrumb--text-overflow"
      >
        <span
          class="t-breadcrumb__inner"
          style="max-width: 150;"
        >
          页面1
        </span>
      </span>
      <span
        class="t-breadcrumb__separator"
      >
        &gt;&gt;
      </span>
    </div>
    <div
      class="t-breadcrumb__item"
    >
      <span
        class="t-breadcrumb--text-overflow"
      >
        <span
          class="t-breadcrumb__inner"
          style="max-width: 150;"
        >
          页面2
        </span>
      </span>
      <span
        class="t-breadcrumb__separator"
      >
        &gt;&gt;
      </span>
    </div>
    <div
      class="t-breadcrumb__item"
    >
      <span
        class="t-breadcrumb--text-overflow"
      >
        <span
          class="t-breadcrumb__inner"
          style="max-width: 160;"
        >
          页面3
        </span>
      </span>
      <span
        class="t-breadcrumb__separator"
      >
        &gt;&gt;
      </span>
    </div>
  </div>
  <div
    class="t-breadcrumb"
  >
    <div
      class="t-breadcrumb__item"
    >
      <span
        class="t-breadcrumb--text-overflow"
      >
        <span
          class="t-breadcrumb__inner"
          style="max-width: 150;"
        >
          页面1
        </span>
      </span>
      <span
        class="t-breadcrumb__separator"
      >
        /////
      </span>
    </div>
    <div
      class="t-breadcrumb__item"
    >
      <span
        class="t-breadcrumb--text-overflow"
      >
        <span
          class="t-breadcrumb__inner"
          style="max-width: 150;"
        >
          页面2
        </span>
      </span>
      <span
        class="t-breadcrumb__separator"
      >
        /////
      </span>
    </div>
    <div
      class="t-breadcrumb__item"
    >
      <span
        class="t-breadcrumb--text-overflow"
      >
        <span
          class="t-breadcrumb__inner"
          style="max-width: 160;"
        >
          页面3
        </span>
      </span>
      <span
        class="t-breadcrumb__separator"
      >
        /////
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`href.jsx 1`] = `
<DocumentFragment>
  <div>
    <div
      class="t-breadcrumb"
    >
      <div
        class="t-breadcrumb__item"
      >
        <a
          class="t-breadcrumb--text-overflow t-link"
          href="/"
          target="_blank"
        >
          <span
            class="t-breadcrumb__inner"
            style="max-width: 150;"
          >
            页面1
          </span>
        </a>
        <span
          class="t-breadcrumb__separator"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            style="color: rgba(0, 0, 0, 0.3);"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <div
        class="t-breadcrumb__item"
      >
        <span
          class="t-breadcrumb--text-overflow t-is-disabled"
        >
          <span
            class="t-breadcrumb__inner"
            style="max-width: 150;"
          >
            页面2
          </span>
        </span>
        <span
          class="t-breadcrumb__separator"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            style="color: rgba(0, 0, 0, 0.3);"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <div
        class="t-breadcrumb__item"
      >
        <span
          class="t-breadcrumb--text-overflow"
        >
          <span
            class="t-breadcrumb__inner"
            style="max-width: 160;"
          >
            页面3
          </span>
        </span>
        <span
          class="t-breadcrumb__separator"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            style="color: rgba(0, 0, 0, 0.3);"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      style="margin-top: 20px;"
    >
      点击计数器：0
    </div>
  </div>
</DocumentFragment>
`;

exports[`icon.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-breadcrumb"
  >
    <div
      class="t-breadcrumb__item"
    >
      <span
        class="t-breadcrumb--text-overflow"
      >
        <span
          class="t-breadcrumb__inner"
          style="max-width: 120px;"
        >
          <svg
            class="t-icon t-icon-books"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 9.28l-4 2.8V3h8v9.08l-4-2.8zm0 1.22l4.21 2.95a.5.5 0 00.79-.41V3a1 1 0 00-1-1H4a1 1 0 00-1 1v10.04c0 .4.45.64.79.4l4.2-2.94z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          页面1
        </span>
      </span>
      <span
        class="t-breadcrumb__separator"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="color: rgba(0, 0, 0, 0.3);"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </div>
    <div
      class="t-breadcrumb__item"
    >
      <span
        class="t-breadcrumb--text-overflow"
      >
        <span
          class="t-breadcrumb__inner"
          style="max-width: 120px;"
        >
          <svg
            class="t-icon t-icon-books"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 9.28l-4 2.8V3h8v9.08l-4-2.8zm0 1.22l4.21 2.95a.5.5 0 00.79-.41V3a1 1 0 00-1-1H4a1 1 0 00-1 1v10.04c0 .4.45.64.79.4l4.2-2.94z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          页面2
        </span>
      </span>
      <span
        class="t-breadcrumb__separator"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="color: rgba(0, 0, 0, 0.3);"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </div>
    <div
      class="t-breadcrumb__item"
    >
      <span
        class="t-breadcrumb--text-overflow"
      >
        <span
          class="t-breadcrumb__inner"
          style="max-width: 120px;"
        >
          <svg
            class="t-icon t-icon-books"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 9.28l-4 2.8V3h8v9.08l-4-2.8zm0 1.22l4.21 2.95a.5.5 0 00.79-.41V3a1 1 0 00-1-1H4a1 1 0 00-1 1v10.04c0 .4.45.64.79.4l4.2-2.94z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          页面3
        </span>
      </span>
      <span
        class="t-breadcrumb__separator"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="color: rgba(0, 0, 0, 0.3);"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`options.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-breadcrumb"
  >
    <div
      class="t-breadcrumb__item"
    >
      <span
        class="t-breadcrumb--text-overflow"
      >
        <span
          class="t-breadcrumb__inner"
          style="max-width: 120px;"
        >
          页面1
        </span>
      </span>
      <span
        class="t-breadcrumb__separator"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="color: rgba(0, 0, 0, 0.3);"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </div>
    <div
      class="t-breadcrumb__item"
    >
      <span
        class="t-breadcrumb--text-overflow"
      >
        <span
          class="t-breadcrumb__inner"
          style="max-width: 120px;"
        >
          页面2
        </span>
      </span>
      <span
        class="t-breadcrumb__separator"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="color: rgba(0, 0, 0, 0.3);"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </div>
    <div
      class="t-breadcrumb__item"
    >
      <a
        class="t-breadcrumb--text-overflow t-link"
        href="https://github.com/"
        target="_self"
      >
        <span
          class="t-breadcrumb__inner"
          style="max-width: 120px;"
        >
          页面3
        </span>
      </a>
      <span
        class="t-breadcrumb__separator"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="color: rgba(0, 0, 0, 0.3);"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`to.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-breadcrumb"
  >
    <div
      class="t-breadcrumb__item"
    >
      <a
        class="t-breadcrumb--text-overflow t-link"
        target="_self"
      >
        <span
          class="t-breadcrumb__inner"
          style="max-width: 120px;"
        >
          首页
        </span>
      </a>
      <span
        class="t-breadcrumb__separator"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="color: rgba(0, 0, 0, 0.3);"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </div>
    <div
      class="t-breadcrumb__item"
    >
      <a
        class="t-breadcrumb--text-overflow t-link"
        target="_self"
      >
        <span
          class="t-breadcrumb__inner"
          style="max-width: 120px;"
        >
          页面1
        </span>
      </a>
      <span
        class="t-breadcrumb__separator"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="color: rgba(0, 0, 0, 0.3);"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`width.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-breadcrumb"
  >
    <div
      class="t-breadcrumb__item"
    >
      <span
        class="t-breadcrumb--text-overflow"
      >
        <span
          class="t-breadcrumb__inner"
          style="max-width: 100px;"
        >
          父级设置100px父级设置100px
        </span>
      </span>
      <span
        class="t-breadcrumb__separator"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="color: rgba(0, 0, 0, 0.3);"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </div>
    <div
      class="t-breadcrumb__item"
    >
      <span
        class="t-breadcrumb--text-overflow"
      >
        <span
          class="t-breadcrumb__inner"
          style="max-width: 160px;"
        >
          设置最大宽度160px设置最大宽度160px设置最大宽度160px
        </span>
      </span>
      <span
        class="t-breadcrumb__separator"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="color: rgba(0, 0, 0, 0.3);"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </div>
    <div
      class="t-breadcrumb__item"
    >
      <span
        class="t-breadcrumb--text-overflow"
      >
        <span
          class="t-breadcrumb__inner"
          style="max-width: 240px;"
        >
          设置最大宽度240px设置最大宽度240px设置最大宽度240px设置最大宽度240px设置最大宽度240px
        </span>
      </span>
      <span
        class="t-breadcrumb__separator"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="color: rgba(0, 0, 0, 0.3);"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </div>
    <div
      class="t-breadcrumb__item"
    >
      <span
        class="t-breadcrumb--text-overflow"
      >
        <span
          class="t-breadcrumb__inner"
          style="max-width: 100px;"
        >
          父级设置100px父级设置100px
        </span>
      </span>
      <span
        class="t-breadcrumb__separator"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="color: rgba(0, 0, 0, 0.3);"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
